--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,955 +1,7 @@
-* {
-  margin: 0;
-}
-
-body {
-  font-family: "Montserrat", sans-serif;
-}
-
-header {
-  display: flex;
-  align-items: center;
-}
-
-#arriba p {
-  color: black;
-  text-decoration: none;
-  font-weight: bold;
-  margin-right: auto;
-  margin-left: 30px;
-  font-size: 23px;
-}
-
-#links {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  margin: 0;
-  padding: 0;
-  height: 0;
-  font-size: 20px;
-
-  li {
-    margin: 0;
-    padding: 0;
-
-    &:not(:last-child)::after {
-      content: "|";
-      margin: 0 4px;
-      color: #aaa;
-    }
-
-    a {
-      text-decoration: none;
-      color: #aaa;
-      font-size: 10px;
-
-      &:hover {
-        color: black;
-      }
-    }
-  }
-}
-
-/*MAIN PAGE*/
-
-#logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  img {
-    max-width: 100%;
-    filter: grayscale(60%);
-  }
-}
-
-h1 {
-  font-size: 2em;
-  color: black;
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 100px auto;
-}
-
-#botones {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 50px;
-}
-
-.botongaleria button {
-  background-color: #444;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  padding: 5px 10px;
-  font-size: 10px;
-}
-
-.botoncontacto button {
-  background-color: #fff;
-  color: #000;
-  border: 1px solid #000;
-  border-radius: 5px;
-  padding: 5px 10px;
-  font-size: 10px;
-  margin-left: 10px;
-}
-
-.botongaleria button:hover {
-  background-color: #0e79b2;
-}
-
-.botoncontacto button:hover {
-  background-color: #0e79b2;
-  color: #fff;
-  border-color: #0e79b2;
-}
-
-#proyecto {
-  margin-top: 90px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #000000;
-
-  img {
-    max-width: 100%;
-  }
-}
-
-#enlaces {
-  ul {
-    margin-bottom: 90px;
-    list-style-type: none;
-    padding: 20;
-  }
-
-  li {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 30px;
-  }
-
-  a {
-    font-size: 60px;
-    color: #aaa;
-    text-decoration: none;
-    transition: color 0.3s ease;
-
-    &:hover {
-      color: black;
-    }
-  }
-}
-
-/*footer general*/
-
-#footer {
-  background-color: black;
-  margin-top: 40px;
-  padding: 30px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  h1 {
-    color: white;
-    margin-top: 0;
-    margin-bottom: 3px;
-  }
-
-  p {
-    margin-top: 0;
-    color: white;
-    font-size: 10px;
-    text-align: center;
-  }
-}
-
-/*NOSOTROS*/
-
-.nosotros {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  color: black;
-
-  h1 {
-    font-size: 3rem;
-    margin-top: 150px;
-    margin-bottom: 60px;
-  }
-
-  p {
-    font-size: 15px;
-    margin-bottom: 100px;
-    width: 70%;
-    color: black;
-  }
-
-  img {
-    width: 100%;
-    margin: 0;
-  }
-  @media (max-width: 900px) {
-    h1 {
-      margin-top: 50px;
-      margin-bottom: 30px;
-      text-align: center;
-    }
-    p {
-      text-align: justify;
-    }
-
-  }
-}
-
-#enfoques {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
-  background-color: black;
-  padding: 30px;
-  gap: 50px;
-}
-
-@media (max-width: 600px) {
-  #enfoques {
-    grid-template-columns: 1fr;
-  }
-}
-
-.grid-item {
-  @media (min-width: 601px) and (max-width: 900px) {
-    p {
-      text-align: center;
-    }
-  }
-  @media (max-width: 600px) {
-    p {
-      text-align: center;
-    }
-  }
-  @media (min-width: 901px){
-    p {
-      text-align: center;
-    }
-  }
-}
-
-  h2 {
-    text-align: center;
-    color: white;
-  }
-
-  p {
-    color: white;
-    text-align: justify;
-  }
-
-/*NOTICIAS*/
-.noticias {
-  margin-bottom: 100px;
-  padding: 20px;
-  border-radius: 10px;
-
-  p, h2 {
-    color: black;
-    margin-right: 30px;
-    margin-bottom: 20px;
-    text-align: justify;
-  }
-
-  p{
-    color: #aaa;
-  }
-}
-
-.grid-container-noticias {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 0px;
-  margin-bottom: 50px;
-
-  @media (min-width: 601px) and (max-width:900) {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  @media (min-width: 901px) {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-.noticiasdiv img {
-  width: 50%;
-  height: auto;
-  object-fit: cover;
-  border-radius: 10px;
-  margin-bottom: 50px;
-  justify-self: center;
-  align-self: center;
-}
-
-.text {
-  text-align: start;
-
-  @media (max-width: 600px) {
-
-    p{
-      text-align: justify;
-      font-size: 8px;
-    }
-    
-    h2{
-      text-align: center;
-      font-size: 15px;
-    }
-  }
-
-}
-
-@media (max-width: 600px) {
-  .grid-container-noticias {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 30px;
-  }
-
-  .img {
-    align-content: center;
-  }
-}
-
-/*Footer Nosotros*/
-
-#footernosotros {
-  background-color: black;
-  padding: 30px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  h1 {
-    color: rgb(255, 255, 255);
-    margin-top: 0;
-    margin-bottom: 3px;
-  }
-
-  p {
-    margin-top: 0;
-    margin-bottom: 5px;
-    color: white;
-    font-size: 10px;
-    text-align: center;
-  }
-
-  @media (max-width:600px) {
-    padding-top: 30px;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-}
-
-/*GALERIA*/
-
-.galeria {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  color: black;
-  text-align: center;
-
-  h1 {
-    font-size: 3rem;
-    margin-top: 100px;
-    margin-bottom: 70px;
-  }
-
-  img {
-    max-width: 100%;
-  }
-
-  h1 {
-    font-size: 2em;
-    color: black;
-  }
-
-  div {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    justify-items: center;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-
-  img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    filter: grayscale(100%);
-    transition: filter 0.3s;
-    position: relative;
-
-    &:hover {
-      filter: none;
-    }
-
-    &::after {
-      content: attr(alt);
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 1.5rem;
-      color: #fff;
-      opacity: 0;
-      transition: opacity 0.3s;
-    }
-
-    &:hover::after {
-      opacity: 1;
-    }
-  }
-}
-
-@media (max-width: 900px) {
-  h1{
-    margin-top: 50px;
-  }
-}
-
-@media (max-width: 600px) {
-.galeria div {
-  grid-template-columns: 1fr;
-}
-.galeria img {
-  width: 90%;
-  margin: 15px;
-  border-radius: 10px;
-}
-}
-
-@media (min-width: 601px) and (max-width: 899px){
-.galeria img { 
-  height: 150px;
-}
-}
-
-/*Titulos, texto e imagenes para seccion equipo*/
-
-#equipo h1 {
-  margin-top: 110px;
-  margin-bottom: 150px;
-  font-size: 2.5rem;
-  
-  @media (max-width: 600px) {
-    margin-top: 50px;
-    margin-bottom: 50px;
-  }
-}
-
-.zaha {
-  margin-bottom: 100px;
-  padding: 20px;
-  border-radius: 10px;
-
-  p, h2 {
-    color: black;
-    margin-right: 30px;
-  }
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 0px;
-
-  @media (min-width: 601px) and (max-width:900) {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  @media (min-width: 901px) {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-.zaha img {
-  width: 50%;
-  height: auto;
-  object-fit: cover;
-  border-radius: 10px;
-  margin-bottom: 50px;
-  justify-self: center;
-}
-
-.text {
-  text-align: start;
-
-  @media (max-width: 600px) {
-
-    p{
-      text-align: justify;
-    }
-    
-    h2{
-      text-align: center;
-    }
-
-  }
-
-}
-
-@media (max-width: 600px) {
-  .grid-container {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 30px;
-  }
-
-  .img {
-    align-content: center;
-  }
-}
-
-.frank {
-  display: grid;
-  grid-template-columns: 1fr;
-  margin-bottom: 100px;
-  padding: 20px;
-
-  .grid-container {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 0;
-
-    img {
-      grid-column: 1;
-      grid-row: 1;
-      width: 50%;
-      height: auto;
-      object-fit: cover;
-      border-radius: 10px;
-      margin-bottom: 50px;
-      justify-self: center;
-    }
-
-    p, h2 {
-      color: black;
-    }
-
-    .text {
-      grid-column: 1;
-      grid-row: 2;
-      text-align: start;
-
-      @media (max-width: 600px) {
-
-
-
-        p {
-          text-align: justify;
-        }
-
-        h2 {
-          text-align: center;
-        }
-    
-        .text {
-          margin-left: 0px;
-        }
-      }
-      @media (min-width: 601px) and (max-width: 900px){
-        text-align: start;
-        .text h2 {
-          margin: 0px;
-        }
-      }
-    }
-  }
-
-  @media (min-width: 901px) {
-    .grid-container {
-      grid-template-columns: 1fr 1fr;
-
-      img {
-        grid-column: 2;
-        grid-row: 1 / span 2;
-      }
-
-      .text {
-        grid-column: 1;
-        grid-row: 1;
-        margin-left: 50px;
-      }
-    }
-  }
-}
-
-.koolhaas {
-  margin-bottom: 100px;
-  padding: 20px;
-  border-radius: 10px;
-
-  p, h2 {
-    color: black;
-    margin-right: 30px;
-  }
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 0px;
-
-  @media (min-width: 601px) and (max-width:900) {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  @media (min-width: 901px) {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-.koolhaas img {
-  width: 50%;
-  height: auto;
-  object-fit: cover;
-  border-radius: 10px;
-  margin-bottom: 50px;
-  justify-self: center;
-}
-
-.koolhaas text {
-  text-align: start;
-
-  @media (max-width: 600px) {
-    text-align: center;
-    p { 
-      text-align: justify;
-    }
-    h2 {
-      text-align: center;
-    }
-  }
-}
-
-@media (max-width: 600px) {
-  .grid-container {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 30px;
-  }
-
-  .img {
-    align-content: center;
-  }
-}
-
-/*CONTACTO*/
-
-.google {
-  width: 100%;
-  height: 200px;
-  filter: grayscale(100%);
-  margin-bottom: 0;
-  margin-top: 60px;
-  border-top: 2px solid black;
-
-  iframe {
-    width: 100%;
-    height: 100%;
-  }
-}
-
-/*formulario*/
-.form {
-  @media (max-width: 600px){
-    .form-group textarea, .form-group input{
-      width: 85%;
-    }
-    & .botonenviar, .botonborrar {
-      font-size: 10px;
-      padding: 10px 20px;
-    }
-  }
-}
-
-.contacto-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 50px;
-}
-
-@media (max-width: 600px) {
-  .contacto-container {
-    grid-template-columns: 1fr;
-    padding: 30px;
-  }
-   p {
-    text-align: center;
-    margin: 0px auto;
-    font-size: 16px;
-    width: 100%;
-  }
-
-  .contacto-item p {
-    text-align: start;
-    margin: 0px
-  }
-}
-
-@media (min-width: 601px) and (max-width: 900px) {
-  .contacto-container {
-    grid-template-columns: 1fr 1fr;
-    padding: 30px;
-  }
-}
-
-@media (min-width: 901px) {
-  .contacto-container {
-    grid-template-columns: 1fr 1fr;
-    padding: 30px;
-  }
-@media (max-width: 600px){
-  .form h1 {
-    margin-top: 70px;
-  }
-}
-}
-
-.contacto h2 {
-  color: black;
-}
-
-.contacto p {
-  width: 50%;
-  margin-top: 40px;
-  color: black
-}
-
-.contacto-ico {
-  margin-top: 5px;
-}
-
-.form-group {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 20px;
-  margin-top: 40px;
-
-  label {
-    margin-bottom: 5px;
-  }
-}
-
-.form h2 {
-  color: black
-}
-
-
-/*botones*/
-
-.buttons {
-  display: block;
-  justify-content: center;
-  align-items: center;
-  margin-top: 50px;
-  font-size: 10x;
-}
-
-.botonenviar {
-  background-color: #444;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  padding: 10px 20px;
-
-  &:hover {
-    background-color: #0e79b2;
-    color: #fff;
-    border-color: #0e79b2;
-  }
-}
-
-.botonborrar {
-  background-color: #fff;
-  color: #333;
-  border: 1px solid #333;
-  padding: 10px 20px;
-  cursor: pointer;
-  border-radius: 5px;
-
-  &:hover {
-    background-color: #0e79b2;
-    color: #fff;
-    border-color: #0e79b2;
-  }
-}
-
-/*metodos de contacto iconos y ultimo texto*/
-
-#equipo {
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  justify-content: center;
-  margin-top: 30px;
-}
-
-.contacto-item {
-  display: flex;
-  align-items: center;
-
-  i {
-    margin-right: 20px;
-    padding-top: 40px;
-  }
-}
-
-/*links del footer*/
-
-nav {
-  ul#foot {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-    font-size: 17px;
-
-    li {
-      padding: 0;
-
-      &:not(:last-child)::after {
-        content: "|";
-        margin: 0 4px;
-        color: #ffffff;
-      }
-
-      a {
-        text-decoration: none;
-        color: #ffffff;
-        font-size: 10px;
-
-        &:hover {
-          color: #5a92b1;
-        }
-      }
-    }
-  }
-
-  @media (max-width: 600px) {
-    ul#foot {
-      flex-wrap: wrap;
-      font-size: 10px;
-
-      li {
-        margin: 5px;
-
-        &:not(:last-child)::after {
-          content: none;
-        }
-      }
-    }
-  }
-}
-
-
-/*siguenos footer*/
-
-#siguenos {
-  display: flex;
-  align-items: start;
-  flex-direction: column;
-  margin-top: 30px;
-  color: white;
-  margin-bottom: 30px;
-
-  p {
-    margin-top: 4px;
-  }
-}
-
-.siguenoslink {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  padding: 0px;
-}
-
-.siguenoslink li {
-  list-style: none;
-}
-
-.facebook a, .instagram a, .twitter a, .linkedin a {
-  color: white;
-  text-decoration: none;
-  font-size: 25px;
-  margin-left: 5px;
-  margin-right: 3px;
-}
-
-#siguenos {
-  li a:hover {
-    color: black;
-  }
-
-  .facebook a:hover {
-    color: rgb(42, 42, 255);
-  }
-
-  .instagram a:hover {
-    color: rgb(255, 0, 106);
-  }
-
-  .twitter a:hover {
-    color: rgb(0, 132, 255);
-  }
-
-  .linkedin a:hover {
-    color: rgb(169, 40, 255);
-  }
-}
-
-.container-fluid {
-  list-style: none;
-  background-color: none;
-}
-
-#navbarNav {
-  list-style: none;
-
-  li {
-    list-style: none;
-    text-decoration: none;
-    margin: 0;
-    padding: 0;
-
-    a {
-      text-decoration: none;
-      color: #aaa;
-      font-size: 12px;
-
-      &:hover {
-        color: black;
-      }
-    }
-  }
-}
+@import '_variables.scss';
+@import '_index.scss';
+@import '_nosotros.scss';
+@import '_noticias.scss';
+@import '_galeria.scss';
+@import '_equipo.scss';
+@import '_contacto.scss';
